--- a/Styles/local.css
+++ b/Styles/local.css
@@ -1,6 +1,11 @@
-
-
-.pfont {
+/* Local Style options. 
+ pfont is primary font family
+ sfont is secondary font family
+ style handles background color and font color
+ tx-sz sets configurable font sizing (note relative sizing for headers)
+ bg-nav options provide the structure for styling hovers and dropdowns on header nav bars. apply to either the entire header div or the menu itself
+ */
+ .pfont {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .sfont {
@@ -10,18 +15,26 @@
 .style-pri-1{
     background-color: white;
 }
-.style-pri-2{
+.tx-sz-sm {
+    font-size: .8em;
+}
+.style-pri-2 {
     background-color: rgb(218, 218, 218);
 }
-.style-pri-3{
+.style-pri-3 {
     background-color: rgb(26, 113, 148);
     color: white;
 }
-.style-pri-4{
+.style-pri-4 {
     background-color: rgb(163, 195, 241);
 }
 
 .bg-nav-1 {
+    background-color: rgb(26, 113, 148);
+    color: white;
+    
+} 
+.bg-nav-1 div > div a {
     background-color: rgb(26, 113, 148);
     color: white;
 } 
@@ -48,6 +61,15 @@
 } 
 
 .bg-nav-3 a:hover{
+    background-color: rgb(104, 124, 133);
+    color: white;
+} 
+.bg-nav-4 {
+    background-color: white;
+    color: black;
+} 
+
+.bg-nav-4 a:hover{
     background-color: rgb(104, 124, 133);
     color: white;
 } 
