--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,7 @@
     <img src="{{ url_for('static', filename='img/my_img.png') }}"> 
 <script src="../../../../JS Utils/less.js/less-less.js-162327a/dist/less.js"></script>-->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/localjs/script.js"></script>
+    
 
     <title>Document</title>
 </head>
@@ -54,15 +53,15 @@
             </div>
             <img class="toggle-r" src="../static/images/Arrow-up.png" alt="arrow-up">
         </div>
-        <div class="row style-pri-2">
-            <div class="col-16 tx-a-hc">
+        <div class="rw style-pri-2">
+            <div class="col-16m tx-a-hc">
                 <p>---</p>
                 <p>Thanks for checking out my profile. Feel free to peruse the various projects I built while attending
                     CodeDojo. Feel free to drop a comment when that functionality becomes available</p>
             </div>
         </div>
-        <div class="row style-pri-1">
-            <div class="col-4 tx-sz-sm list-1">
+        <div class="rw style-pri-1">
+            <div class="col-4m tx-sz-sm list-1">
                 <h3>List 1 Style</h3>
                 <ul>
                     <li>HTML/CSS Projects
@@ -80,38 +79,38 @@
             </div>
             <!--Note the comments between the Div's handles the natural gap between the divs whose widths are managed by %.
             -->
-            <div class="col-8 tx-a-hc">
-                <iframe id="frame" src="1.png"></iframe>
+            <div class="colm-8 tx-a-hc">
                 <div id="pager" class="hmenu-sm">
 
                 </div>
                 <div class="row tx-a-vc">
-                    <div class="col-12 tx-a-vc">
+                    <div class="col-12m tx-a-vc">
                         <p class="tx-a-vc">more stuff</p>
                     </div>
                 </div>
             </div>
             <!--Note the comments between the Div's handles the natural gap between the divs whose widths are managed by %.
             -->
-            <div class="col-4">
+            <div class="colm-4">
                 <p>right side stuff</p>
             </div>
         </div>
-        <div class="row style-pri-4">
-            <div class="col-4">
+        <div class="rw style-pri-4">
+            <div class="colm-4">
                 <p>stuff here</p>
             </div>
-            <div class="col-5 tx-a-vc">
+            <div class="colm-5 tx-a-vc">
                 <p> stuff here</p>
-                <div class="row tx-a-vc">
-                    <div class="col-12 tx-a-vc">
+                <div class="rw tx-a-vc">
+                    <div class="colm-12 tx-a-vc">
                         <p class="tx-a-vc">more stuff</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../static/localjs/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
